# LoanPurchase

./: .env.dev  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  pyproject.toml  requirements.txt  template_report.odt
djangoapp/: admin.py  models.py  serializer.py  tasks.py  views.py
djangoapp/migrations/: 0001_initial.py  0002_alter_profileclient_status.py  0003_alter_profileclient_status.py
djangoproj/: celery.py  settings.py  urls.py
helpers/: custom_response.py  validate_cpf.py
services/: profileclient_service.py
tests/: test_resgisterclient_view.py
